表示中の番組を数える

--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -42,7 +42,7 @@
 	      <label class="btn btn-default"><input type="checkbox" value="GR" checked>地上波 ({{count.by_type.GR}})</label>
 	    </div>
 	  </form>
-	  <p class="navbar-text">全 {{count.all}} 件</p>
+	  <p class="navbar-text">全 {{count.all}} 件（<span id="count-shown">-</span> 件表示中）</p>
 	</div>
       </div>
     </nav>
