--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -33,13 +33,14 @@
 	<div class="navbar-collapse collapse">
 	  <form class="navbar-form navbar-left form-inline">
 	    <div class="form-group btn-group" id="hide-prog-status" data-toggle="buttons">
-	      <label class="btn btn-default"><input type="checkbox" value="f"><span class="f q">無視番組</span> ({{count.filtered}})</label>
-	      <label class="btn btn-default"><input type="checkbox" value="r"><span class="r">予約済番組</span> ({{count.reserved}})</label>
+	      <label class="btn btn-default btn-xs"><input type="checkbox" value="f"><span class="f q">無視番組</span> <small>({{count.filtered}})</small></label>
+	      <label class="btn btn-default btn-xs"><input type="checkbox" value="r"><span class="r">予約済番組</span> <small>({{count.reserved}})</small></label>
+	      <label class="btn btn-default btn-xs"><input type="checkbox" value="a">未予約番組 <small>({{count.available}})</small></label>
 	    </div>
 	    <div class="form-group btn-group" id="hide-ch-type" data-toggle="buttons">
-	      <label class="btn btn-default"><input type="checkbox" value="BS" checked>BS ({{count.by_type.BS}})</label>
-	      <label class="btn btn-default"><input type="checkbox" value="CS" checked>CS ({{count.by_type.CS}})</label>
-	      <label class="btn btn-default"><input type="checkbox" value="GR" checked>地上波 ({{count.by_type.GR}})</label>
+	      <label class="btn btn-default btn-xs"><input type="checkbox" value="BS" checked>BS <small>({{count.by_type.BS}})</small></label>
+	      <label class="btn btn-default btn-xs"><input type="checkbox" value="CS" checked>CS <small>({{count.by_type.CS}})</small></label>
+	      <label class="btn btn-default btn-xs"><input type="checkbox" value="GR" checked>地上波 <small>({{count.by_type.GR}})</small></label>
 	    </div>
 	  </form>
 	  <p class="navbar-text">全 {{count.all}} 件（<span id="count-shown">-</span> 件表示中）</p>
