新番組と最終回を色分けするようにした

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,22 +1,12 @@
-
-
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
+table.table { font-size: 12px; }
+.f { color: #ccc; }
+.r { background-color: #fee; }
+.q { background-color: #ff0; font-weight: bold; }
+label.btn input[type='checkbox'] { display: none; }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.n { background-color: #efe; }
+.l { background-color: #eef; }
