tableをやめてresponsiveに

--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -10,7 +10,7 @@
     <style>
       body { font-family: sans-serif; padding-top: 60px; padding-bottom: 20px; }
     </style>
-    <link rel="stylesheet" href="{{baseuri}}/css/bootstrap-theme.min.css">
+    <!--link rel="stylesheet" href="{{baseuri}}/css/bootstrap-theme.min.css"-->
     <link rel="stylesheet" href="{{baseuri}}/css/main.css">
     <script src="{{baseuri}}/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
   </head>
