--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,17 +1,17 @@
-<div class="container table-responsive">
-  <table class="table table-bordered table-condensed">
-    <thead><tr><th style="min-width: 4em;">状態</th><th style="min-width: 8em;">開始時刻</th><th style="min-width: 10em;">チャンネル</th><th style="min-width: 20em;">番組名</th><th>番組内容</th></tr></thead>
-    <tbody>
-      {% for row in rows %}{% strip %}
-      <tr class="{{ row.classes }}">
-    <td>{% for cap in row.captions %}<span class="{{cap.class}}" title="{{cap.caption}}" aria-hidden="true"></span>{% endfor %}</td>
-	<td>{{row.res.starttime | date:"%m/%d %a %H:%M"}}</td>
-	<td>[{{row.res.type}}] {{row.res.name}}</td>
-	<td>{{row.matched}}{%unless row.filtered or row.reserved %} <button type="button" class="add-ignore-keyword btn btn-default btn-xs" data-toggle="modal" data-target="#add-keyword" data-add-keyword="{{row.matched}}"><span class="glyphicon glyphicon-remove"></span></button>{% endunless %}</td>
-	<td>{{row.res.description}}</td>
-      </tr>{% endstrip %}
-{% endfor %}</tbody>
-  </table>
+<div class="container">
+  <div class="list-group" style="font-size: 12px;">
+    {% for row in rows %}{% strip %}
+    <div class="list-group-item program {{row.classes}}">
+      <div class="row">
+        <div class="col-xs-4 col-sm-1">{{row.res.starttime | date:"%m/%d %a %H:%M"}}</div>
+        <div class="col-xs-8 col-sm-1">[{{row.res.type}}] {{row.res.name}}</div>
+        <div class="clearfix visible-xs-block hidden-sm hidden-md hidden-lg"></div>
+        <h4 class="col-xs-12 col-sm-6 list-group-item-heading"><small>{% for cap in row.captions %}<span class="{{cap.class}}" title="{{cap.caption}}" aria-hidden="true"></span>{% endfor %}</small> {{row.matched}}{%unless row.filtered or row.reserved %} <button type="button" class="add-ignore-keyword btn btn-default btn-xs" data-toggle="modal" data-target="#add-keyword" data-add-keyword="{{row.matched}}"><span class="glyphicon glyphicon-remove"></span></button>{% endunless %}</h4>
+        <div class="col-xs-12 col-sm-4">{{row.res.description}}</div>
+      </div>
+    </div>
+{% endstrip %}{% endfor %}    
+  </div>
 </div>
 
 <div class="modal" id="add-keyword" tabindex="-1" role="dialog" aria-labelledby="add-keyword-label" aria-hidden="true">
